--- a/slot-dart/web/style.css
+++ b/slot-dart/web/style.css
@@ -1,6 +1,23 @@
-body {
-    background: lightskyblue;
+@font-face {
+    font-family: 'Minecraftia';
+    src: url('assets/fonts/minecraftia.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+
 }
+
+html, body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    overflow: auto;
+    text-align: center;
+    background: #ffffff;
+}
+
 canvas {
     margin: 0 auto;
     display: block;
